<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Qiku PanicReport</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="menu_show_reports">Reports list</string>
    <string name="menu_edit_settings">Settings</string>
    <string name="menu_delete_reports">Delete Reports</string>
    <string name="no_reports">No cached report</string>
    <string name="notification_bugreport_failed">BugReport failed.</string>
    <string name="notification_bugreport_timeout">Log collection time out.</string>
    <string name="notofication_cached_report_title">Pending bugreport complaint </string>
    <string name="notification_cached_report_network_title">Network available</string>
    <string name="notofication_cached_report_info" formatted="false">You have %d report%s to upload</string>
    <string name="notification_invalid_device_id_title">Device UID invalid</string>
    <string name="notification_invalid_device_id_msg">Contact your device admin for help.</string>
    <string name="notification_title_battery_suspended">Uploads suspended</string>
    <string name="notification_message_battery_suspended">Connect device to external power to resume.</string>
    <string name="notification_title_incomplete_setup">Setup required</string>
    <string name="notification_msg_incomplete_setup">Bugreport setup not completed</string>
    <string name="report_list">Cached complaint reports</string>
    <string name="report_list_menu_view">View</string>
    <string name="report_list_menu_edit">Edit</string>
    <string name="report_list_menu_send">Send</string>
    <string name="report_list_menu_delete">Delete</string>
    <string name="settings_category_userinfo">User contact information</string>
    <string name="settings_category_engineer">Engineering mode configuration</string>
    <string name="settings_fname">First name</string>
    <string name="settings_dialog_title_edittext_fname">Enter your name</string>
    <string name="settings_email">Email address</string>
    <string name="settings_dialog_title_edittext_email">Enter your email address</string>
    <string name="settings_phone">Phone Number</string>
    <string name="settings_dialog_title_edittext_phone">Enter your phone number</string>
    <string name="settings_coreid">Employee ID</string>
    <string name="settings_dialog_title_edittext_coreid">Enter your Qiku employee ID</string>
    <string name="settings_additional_logs">Additional logs</string>
    <string name="settings_add_screenshot">Attach screenshots</string>
    <string name="settings_collect_location">Collect my location</string>
    <string name="settings_upload">Upload options</string>
    <string name="settings_wifi_only">Upload over wifi</string>
    <string name="settings_wifi_only_summary_on">Upload over wifi is allowed</string>
    <string name="settings_wifi_only_summary_off">Upload over wifi is not allowed</string>
    <string name="settings_mobile_upload">Upload over 2G network</string>
    <string name="settings_mobile_upload_summary_on">Upload over 3G/2G is allowed</string>
    <string name="settings_mobile_upload_summary_off">Upload over 3G/2G is not allowed</string>
    <string name="settings_battery_level">Minimum Battery Level</string>
    <string name="settings_battery_level_summary">Uploads are suspended when the battery level is below the specified percentage, unless the device is on external power</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_deam_notification">System bug notification</string>
    <string name="settings_deam_notification_on">Show notification while building and uploading bugs detected by the system</string>
    <string name="settings_deam_notification_off">Don\'t show notification while building and uploading bugs detected by the system</string>
    <string name="settings_auto_collect_title">Report system bugs</string>
    <string name="settings_auto_collect_summary_on">Bugs detected by the system will be reported</string>
    <string name="settings_auto_collect_summary_off">Bugs detected by the system will be ignored</string>
    <string name="settings_auto_upload">Upload automatically</string>
    <string name="settings_auto_upload_summary_on">New reports will be uploaded as soon as they are ready</string>
    <string name="settings_auto_upload_summary_off">New reports will be paused in the outbox until manually uploaded</string>
    <string name="settings_coreid_required">Employee ID is required for your device group</string>
    <string name="upload_pending">Network unavailable, task is pending.</string>
    <string name="upload_not_allowed">Upload over 3G/2G is not allowed, task is pending.</string>
    <string name="upload_already_exist">The complaint report is already in the upload queue.</string>
    <string name="upload_msg_failed">Upload complaint report failed.</string>
    <string name="upload_msg_canceled">Upload has been canceled.</string>
    <string name="upload_msg_conpression_failed">Compression failed.</string>
    <string name="upload_msg_invalid_log">Invalid log file.</string>
    <string name="toast_invalid_email">Invalid email address</string>
    <string name="toast_log_collection_started">Log collection started.</string>
    <string name="toast_log_collection_completed">Log collection completed.</string>
    <string name="toast_save_as_draft">Report saved as draft</string>
    <string name="alert_dialog_collector_failed_msg">Did not receive debug information from device, please try again later.</string>
    <string name="alert_dialog_sd_missing_msg">No space left on device, please insert a SDcard or clean up the memory and try again.</string>
    <string name="alert_dialog_no_summary_title">Issue summary required.</string>
    <string name="alert_dialog_no_summary_msg">Please enter the issue summary before sending this report.</string>
    <string name="alert_dialog_no_category_title">Issue category required.</string>
    <string name="alert_dialog_no_category_msg">Please choose a category before sending this report.</string>
    <string name="alert_dialog_collection_on_going">Please wait until the log collection finishes.</string>
    <string name="alert_dialog_delete_report">Are you sure you want to delete this report?</string>
    <string name="alert_dialog_delete_reports">Are you sure you want to delete these reports?</string>
    <string name="alert_dialog_upload_reprot">Are you sure you want to upload this report?</string>
    <string name="alert_dialog_cancel_upload">Are you sure you want to cancel this upload?</string>
    <string name="alert_dialog_title_discard_or_save_report">Discard or Save?</string>
    <string name="alert_dialog_msg_discard_or_save_report">Do you want to discard or save the report?</string>
    <string name="alert_dialog_title_discard_report">Discard report?</string>
    <string name="alert_dialog_msg_discard_report">Are you sure you want to discard this report?</string>
    <string name="alert_dialog_title_contactinfo">Contact info required</string>
    <string name="alert_dialog_message_contactinfo">Please make sure all required info in the settings are configured before sending this complaint report.</string>
    <string name="alert_dialog_title_error">Error information</string>
    <string name="alert_dialog_message_error">PanicReport encountered a problem, please try again later.</string>
    <string name="alert_dialog_title_use_magic_key">Magic keys</string>
    <string name="alert_dialog_message_use_magic_key">Please press the magic keys to trigger log collection. Ask your device administrator for the exact keys to press.</string>
    <string name="alert_dialog_title_invalid_logfile">Invalid log file</string>
    <string name="alert_dialog_message_invalid_logfile">The log file does not exist, press \"OK\" to delete this report or \"Cancel\" to cancel this upload.</string>
    <string name="alert_dialog_message_change_group">Are you sure you want to change group to %s?</string>
    <string name="alert_dialog_title_discard_changes">Discard changes</string>
    <string name="alert_dialog_message_discard_changes">Are you sure you want to discard all changes?</string>
    <string name="alert_dialog_title_save_changes">Apply changes</string>
    <string name="alert_dialog_message_save_changes">Do you want to apply the changes you made?</string>
    <string name="alert_dialog_delete_attach">Are you sure you want to delete this attachment?</string>
    <string name="alert_dialog_title_attach_screenshot">Attach screenshot</string>
    <string name="alert_dialog_message_attach_screenshot">Do you want to attach the screenshot for this issue?</string>
    <string name="alert_dialog_dont_show_again">Don\'t show this again.</string>
    <string name="alert_dialog_title_file_mgr_required">No file manager.</string>
    <string name="alert_dialog_message_file_mgr_required">Please install the file manager or a compatible application. Do you want to download it now?</string>
    <string name="alert_dialog_incompatible_system">The installed version of PanicReport is not compatible with your system software</string>
    <string name="alert_dialog_report_incompleted">You selected an incomplete report. Do you want to edit it now?</string>
    <string name="alert_dialog_about_title">About</string>
    <string name="alert_dialog_about_msg" formatted="false">Version: %s\nDevice UID: %s\n</string>
    <string name="alert_dialog_about_author">Bug expert</string>
    <string name="report_selected">Selected</string>
    <string name="bug_prompt">Bug: </string>
    <string name="transmit_paused">paused</string>
    <string name="resuming_upload">resuming....</string>
    <string name="complete_upload">completed</string>
    <string name="contacting_server">contacting server....</string>
    <string name="cancelling_upload">cancelling....</string>
    <string name="report_date">Date:</string>
    <string name="report_status">Status:</string>
    <string name="app_settings">Settings</string>
    <string name="app_help">Help</string>
    <string name="app_about">About</string>
    <string name="action_bar_send">Send</string>
    <string name="action_bar_discard">Discard</string>
    <string name="action_bar_save_draft">Save as draft</string>
    <string name="launcher_manage_reports">Manage reports</string>
    <string name="editor_description_hint">Description</string>
    <string name="setup_reset">Reset</string>
    <string name="setup_done">Done</string>
    <string name="setup_skip">Skip</string>
    <string name="editor_reminder">Kindly reminder：Your phone has occurred system issues just now. Do you remember your steps?If yes, could you please write down them and submit? Thank you very much!</string>
    <string name="audio_record">Start record</string>
    <string name="submit_report">Submit</string>
    <string name="problem_description_introduction">Suggest</string>
    <string name="problem_description_hint">Please write your puzzle or suggest we will continuous improvement</string>
    <string name="problem_description_image_introduction">Screenshot</string>
    <string name="problem_description_add_more">Add more</string>
    <string name="problem_user_info_phone">Phone number</string>
    <string name="problem_user_info_email">Email</string>
    <string name="problem_user_info_commit">Done</string>
    <string name="problem_setting_wifi_commit">Upload only  wifi  available </string>
    <string name="problem_setting_user_plan">User experience program</string>
    <string name="problem_setting_user_plan_introduction_on">Automatically submit System log when detect bug</string>
    <string name="problem_setting_user_plan_introduction_off">manually submit System log when detect bug</string>
</resources>