<?xml version="1.0" encoding="utf-8"?>
<!--
        Copyright (C) 2007 The Android Open Source Project Licensed under the Apache License,
        Version 2.0 (the "License"); you may not use this file except in compliance with the
        License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
        Unless required by applicable law or agreed to in writing, software distributed under the
        License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
        either express or implied. See the License for the specific language governing permissions
        and limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    >


            <TextView
                android:id="@+id/editorDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
				android:text="@string/report_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/editorDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf ="@id/editorDate"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <View 
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_below="@id/editorDate1"
                />


            <TextView
                android:id="@+id/editorStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:text="@string/report_status"
                android:layout_below="@id/view1"
                android:layout_marginLeft="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/editorStatus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf ="@id/editorStatus"
                android:layout_alignTop="@id/editorStatus"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <View 
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_below="@id/editorStatus1"
                />
 
        <TextView
            android:id="@+id/editorReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
            android:gravity="top"
            android:text="@string/editor_reminder"
            />
       
		 <View 
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            />
        
        <com.tronxyz.bug_report.ui.AttachmentView
            android:id="@+id/attachmentsView"
            android:layout_below="@id/editorReminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip" />
        
        <EditText
            android:id="@+id/editorDescription"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
            android:layout_height="280dip"
			android:layout_below="@id/attachmentsView"
            android:gravity="top"
            android:hint="@string/editor_description_hint" />
        
        
        <TextView 
            android:id="@+id/audioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_below="@id/editorDescription"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        
        <ImageButton 
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/audioName"
            android:layout_alignRight="@id/editorDescription"
            android:src="@android:drawable/btn_dialog"
            android:layout_below="@id/editorDescription"
            />
        
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >        
	        <Button 
	            android:id="@+id/audioButton"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="10dip"
	            android:layout_marginBottom="20dp"
	            android:text="@string/audio_record"/>
	        
	        <TextView 
	            android:id="@+id/recordTime"
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginBottom="20dp"
	            android:textColor="@android:color/holo_blue_light"
	            android:textSize="20sp"/>

	        <Button
	            android:id="@+id/submitButton"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:layout_marginLeft="90dp"
	            android:text="@string/submit_report" />

        </LinearLayout>               


</RelativeLayout>
